fixed z-index 101 of hamburger

--- a/Stylesheets/navbar.css
+++ b/Stylesheets/navbar.css
@@ -7,6 +7,7 @@
   right: 0;
   display: inline-block;
   cursor: pointer;
+  z-index: 101;
 }
 .bar1,
 .bar2,
